# rassumfrassum

./: README.md  dada.py  jaja.py  lolo.py  notes.txt  pyproject.toml  setup.py  wowo.py
.github/workflows/: publish.yml
src/rassumfrassum/: __init__.py  frassum.py  main.py  preset.py  rassum.py  stdio.py  test2.py  util.py
src/rassumfrassum/presets/: __init__.py  python.py  vue.py
test/: client_common.py  run-all.sh  server_common.py
test/basedpyright+ruff/: client.py
test/basedpyright+ruff+codebook/: client.py  run.sh
test/basedpyright+ty/: client.py
test/basic/: client.py  run.sh  server.py
test/codeaction-aggregation/: client.py  run.sh  server.py
test/drop-tardy-notification/: client.py  run.sh  server.py
test/drop-tardy-response/: client.py  run.sh  server.py
test/late-diagnostics-from-s2/: client.py  run.sh  server.py
test/out-of-order-diagnostics/: client.py  run.sh  server.py
test/rename-routing/: client.py  run.sh  server.py
test/server-crash/: client.py  run.sh  server.py
test/server-request/: client.py  run.sh  server.py
test/serverinfo-merge/: client.py  run.sh  server.py
test/tardy-initialize-response/: client.py  run.sh  server.py
test/textdocumentsync-full-wins/: client.py  run.sh  server.py
test/too-late-diagnostics-from-s1/: client.py  run.sh  server.py
